--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 			color: white;
 		}
 
+		.subtitle{
+			font-family: 'Lato', sans-serif;
+			color: #ab5102;
+		}
+
 		.skills{
 			font-size: 2em;
 		}
@@ -59,7 +64,7 @@
 
 	<div class="row">
 		<div class="col-xs-12 col-md-3">
-			<img src="handsome.jpg" alt="Raunak" class="img-responsive">
+			<img src="casual.jpg" alt="Raunak" class="img-responsive">
 		</div>
 		<div class="col-xs-12 col-md-3">
 			<h1>Raunak Singwi</h1>
@@ -116,7 +121,7 @@
 
 	<div class="row">
 		<div class="col-xs-12">
-			<p>'Moodie and Foodie' defines me the best. Apart from eating, I love to code. Just the feeling to write something on my computer and the see something happen is amazingly pleasing. But if coding is my bread and butter, listning and reciting poetry is my desert. Apart from that, I love skateboarding and swimming. </p>
+			<p>'Moodie and Foodie' defines me the best. Apart from eating, I love to code. Just the feeling to write something on my computer and then see something amazing happen is incredibly pleasing. But if coding is my bread and butter, listening and reciting poetry is my desert. Apart from that, I love skateboarding and swimming. </p>
 		</div>
 	</div>
 
@@ -133,37 +138,32 @@
 
 	<br><br>
 
-	<div class="row table-responsive">
-		<table class="table">
-			<tr>
-				<th>
-					<h1>Ramdeobaba College of Engineering, Nagpur</h1>
-                	<h4>Current: Final Year</h4>
-				</th>
-				<td>
+	<div class="row">
+		<div class="col-xs-12 col-md-3">
+			<h1>Ramdeobaba College of Engineering, Nagpur</h1>
+        	<h4>Current: Final Year</h4>
+		</div>
+		<div class="col-xs-12 col-md-9">
 					<p>Well, college is not what I assumed it to be. And definitely not what others told me about it ! All those, physics chemistry and mathematics classes in 1st year... I hated them ! I thought 2nd year will be where we dive into technology and start making software. How immature I was... I didn't want to learn most of the subjects ! I always wanted to be a software developer, a coder,a designer.... But yes, here I met genius people who guided me to become what I want to be. And yes, college have taught me a lot. It taught me, how to learn on your own. How to study the whole night to pass the exams next morning. How to do work with patience and dedication you don't like to do(writing journals and assignments). And the hostel life.... It taught me to adjust with everyone, quickly adopt the situations, how to work in a team, and much more. Hostel life is amazingly fun. </p>
-				</td>
-			</tr>
-			<tr>
-				<th>
-					<h1>Padhye Sir's Akash Education, Akola</h1>
-                	<h4>The <big>Bad</big> Times...</h4>
-				</th>
-				<td>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-12 col-md-3">
+			<h1>Padhye Sir's Akash Education, Akola</h1>
+        	<h4>The <big>Bad</big> Times...</h4>
+		</div>
+		<div class="col-xs-12 col-md-9">
 					<p>I liked mathematics and science in school. I even managed to pass the entrance test for the JEE coaching classes at a reputed institute. But this time, the studies were overwhelming. A few days of carelessness and I was way behind the class. Academic depression ! I made a lot of mistakes there after. Bunked classes, didn't study. It was all miserable. I have learned a lot from my mistakes. I won't make such mistakes ever again.</p>
-				</td>
-			</tr>
-			<tr>
-				<th>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-12 col-md-3">
 					<h1>Dinbai High School, Digras</h1>
                 	<h4>Wonderland...The Awesome Times...</h4>
-				</th>
-				<td>
+		</div>
+		<div class="col-xs-12 col-md-9">
 					<p>This was probably the best time of my life. It was fun. Life seemed very simple. Living with family. All those friends, those memories... School really shaped my life. It helped me explore myself and identify my qualities and weaknesses. I was a good student at school. Good at academics as well as extra-curricular.</p>
-				</td>
-			</tr>
-		</table>
-
+		</div>
 	</div>
 	
 	<br>
@@ -176,111 +176,121 @@
 		</div>
 	</div>
 
-	<br><br>
+	<br>
+	<br>
 
 	<div class="row">
-		<div class="col-xs-12">
-			<h2>Technical Skills</h2>
-			<br><br>
+		<div class="col-xs-12 subtitle">
+			<h2>TECHNICAL SKILLS</h2>
+			<br>
+			<br>
 		</div>
 	</div>
 
-	<div class="row table-responsive">
-		<table class="table skills">
-			<tr>
-				<th>
-					Programming Languages : 
-				</th>
-				<td>
-					Python, Java, C, SQL.
-				</td>
-			</tr>
+	<div class="row">
+		<div class="col-xs-12 col-md-3">
+			<p>Programming Languages : </p>
+		</div>
+		<div class="col-xs-12 col-md-9">
+			<p>Python, Java, C, SQL.</p>
+		</div>
+	</div>
 			
-			<tr>
-				<th>
-					Databases : 
-				</th>
-				<td>
-					SQLite, Oracle Database.
-				</td>
-			</tr>
-			
-			<tr>
-				<th>
-					Web Development : 
-				</th>
-				<td>
-					HTML, CSS, jQuery (Basic knowledge), BootStrap.
-				</td>
-			</tr>
-			
-			<tr>
-				<th>
-					Tools / Frameworks
-				</th>
-				<td>
-					Selenium WebDriver (Basic), Git/GitHub.
-				</td>
-			</tr>
-			
-		</table>
+	<div class="row">
+		<div class="col-xs-12 col-md-3">
+			<p>Databases :</p> 
+		</div>
+		<div class="col-xs-12 col-md-9">
+			<p>SQLite, Oracle Database.</p>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-xs-12 col-md-3">
+						<p>Web Development : </p>
+		</div>
+		<div class="col-xs-12 col-md-9">
+						<p>HTML, CSS, jQuery (Basic knowledge), BootStrap.</p>
+		</div>
+	</div>
+	
+	<div class="row">			
+		<div class="col-xs-12 col-md-3">
+			<p>Tools / Frameworks</p>
+		</div>
+		<div class="col-xs-12 col-md-9">
+			<p>Selenium WebDriver (Basic), Git/GitHub.</p>
+		</div>
+	</div>
 
 		<div class="row">
-			<div class="col-xs-12">
-				<h2>Projects</h2>
+			<div class="col-xs-12 subtitle">
+				<h2>PROJECTS</h2>
 				<br><br>
 			</div>
 		</div>
 
-		<div class="row table-responsive">
-			<div class="col-xs-12">
-				<table class="table skills">
-				<tr>
-					<th>College Inquiry ChatBot</th>
-					<td>This is the project I am doing under persistent. This is a chatbot web-app which will answer engineering college related queries such as queries about admissions or placements.</td>
-				</tr>
-
-				<tr>
-					<th>Railway Ticket Booking Automation</th>
-					<td>I am writing a script that will automate the process of booking railway tickets from IRCTC website. The program will first ask for the passenger details and then wait for user input to start the process (as you need to wait till 11 am to book tatkal tickets).Specially useful for tatkal tickets where the time to book a ticket is really low and this automation can give you an edge and increase the chances of getting the taktal ticket.</td>
-				</tr>
-				</table>
+		<div class="row">
+			<div class="col-xs-12 col-md-3">
+					<p>College Inquiry ChatBot</p>
+			</div>
+			<div class="col-xs-12 col-md-9">
+					<p>This is the project I am doing under persistent. This is a chatbot web-app which will answer engineering college related queries such as queries about admissions or placements.</p>
 			</div>
 		</div>
 
-		<br><br>
+		<div class="row">
+			<div class="col-xs-12 col-md-3">
+					<p>Railway Ticket Booking Automation</p>
+			</div>
+			<div class="col-xs-12 col-md-9">
+					<p>I am writing a script that will automate the process of booking railway tickets from IRCTC website. The program will first ask for the passenger details and then wait for user input to start the process (as you need to wait till 11 am to book tatkal tickets).Specially useful for tatkal tickets where the time to book a ticket is really low and this automation can give you an edge and increase the chances of getting the taktal ticket.</p>
+			</div>
+		</div>
+
+		<br>
+		<br>
 
 		<div class="row">
-			<div class="col-xs-12">
-				<h2>Interpersonal Skills</h2>
+			<div class="col-xs-12 subtitle">
+				<h2>INTERPERSONAL SKILLS</h2>
 				<br><br>
 			</div>
 		</div>
 
-		<div class="row table-responsive">
-			<div class="col-xs-12">
-				<table class="table skills">
-					<tr>
-						<th>Public Speaking and Debating</th>
-						<td>I am very confident in delivering speech in front of mass audience. I have won various awards in speech and debate competitions.</td>
-					</tr>
-					<tr>
-						<th>Team Player</th>
-						<td>I enjoy working with people as a team. I realized this by playing various sports and also organizing some co-curricular events.</td>
-					</tr>
-					<tr>
-						<th>Leadership</th>
-						<td>I believe that I have leadership qualities. I have found myself many time leading the team in the right direction with a solution centric approach.</td>
-					</tr>
-				</table>
-			</div>		
+		<div class="row">
+			<div class="col-xs-12 col-md-3">
+						<p>Public Speaking and Debating</p>
+			</div>
+			<div class="col-xs-12 col-md-9">
+						<p>I am very confident in delivering speech in front of mass audience. I have won various awards in speech and debate competitions.</p>
+			</div>
 		</div>
+		
+		<div class="row">
+			<div class="col-xs-12 col-md-3">
+						<p>Team Player</p>
+			</div>
+			<div class="col-xs-12 col-md-9">
+						<p>I enjoy working with people as a team. I realized this by playing various sports and also organizing some co-curricular events.</p>
+			</div>
+		</div>
+		
+		<div class="row">
+			<div class="col-xs-12 col-md-3">
+						<p>Leadership</p>
+			</div>
+			<div class="col-xs-12 col-md-9">
+						<p>I believe that I have leadership qualities. I have found myself many time leading the team in the right direction with a solution centric approach.</p>
+			</div>
+		</div>		
 
-		<br><br>
+		<br>
+		<br>
 
 		<div class="row">
-			<div class="col-xs-12">
-				<h2>Public Speaking / Debating Achievements</h2>
+			<div class="col-xs-12 col-md-7 subtitle">
+				<h2>PUBLIC SPEAKING ACHIEVEMENTS</h2>
 				<br><br>
 			</div>
 		</div>
