--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <div class="container">
 
 	<div class="row">
-		<div class="col-xs-6 col-md-3 title">
+		<div class="col-xs-12 col-md-3 title">
 			<h2><span class="glyphicon glyphicon-user"></span> PROFILE</h2>
 		</div>
 	</div>
@@ -131,7 +131,7 @@
 
 
 	<div class="row">
-		<div class="col-xs-6 col-md-4 title">
+		<div class="col-xs-12 col-md-4 title">
 			<h2><span class="glyphicon glyphicon-road"></span> JOURNEY SO FAR</h2>
 		</div>
 	</div>
@@ -171,7 +171,7 @@
 
 
 	<div class="row">
-		<div class="col-xs-6 col-md-5 title">
+		<div class="col-xs-12 col-md-5 title">
 			<h2><span class="glyphicon glyphicon-star"></span> SKILLS & ACHIEVEMENTS</h2>
 		</div>
 	</div>
@@ -189,136 +189,136 @@
 
 	<div class="row">
 		<div class="col-xs-12 col-md-3">
-			<p>Programming Languages : </p>
+			<p style="font-weight: bold;">PROGRAMMING LANGUAGES : </p>
 		</div>
 		<div class="col-xs-12 col-md-9">
 			<p>Python, Java, C, SQL.</p>
 		</div>
 	</div>
-			
+	<br>
 	<div class="row">
 		<div class="col-xs-12 col-md-3">
-			<p>Databases :</p> 
+			<p style="font-weight: bold;">DATABASE :</p> 
 		</div>
 		<div class="col-xs-12 col-md-9">
 			<p>SQLite, Oracle Database.</p>
 		</div>
 	</div>
-	
+	<br>
 	<div class="row">
 		<div class="col-xs-12 col-md-3">
-						<p>Web Development : </p>
+			<p style="font-weight: bold;">WEB DEVELOPMENT : </p>
 		</div>
 		<div class="col-xs-12 col-md-9">
 						<p>HTML, CSS, jQuery (Basic knowledge), BootStrap.</p>
 		</div>
 	</div>
-	
+	<br>
 	<div class="row">			
 		<div class="col-xs-12 col-md-3">
-			<p>Tools / Frameworks</p>
+			<p style="font-weight: bold;">TOOLS / FRAMEWORKS</p>
 		</div>
 		<div class="col-xs-12 col-md-9">
 			<p>Selenium WebDriver (Basic), Git/GitHub.</p>
 		</div>
 	</div>
-
-		<div class="row">
-			<div class="col-xs-12 subtitle">
-				<h2>PROJECTS</h2>
-				<br><br>
-			</div>
+	<br>
+	<div class="row">
+		<div class="col-xs-12 subtitle">
+			<h2>PROJECTS</h2>
+			<br><br>
 		</div>
+	</div>
 
-		<div class="row">
-			<div class="col-xs-12 col-md-3">
-					<p>College Inquiry ChatBot</p>
-			</div>
-			<div class="col-xs-12 col-md-9">
-					<p>This is the project I am doing under persistent. This is a chatbot web-app which will answer engineering college related queries such as queries about admissions or placements.</p>
-			</div>
+	<div class="row">
+		<div class="col-xs-12 col-md-3">
+			<p style="font-weight: bold;">COLLEGE INQUIRY CHATBOT</p>
 		</div>
-
-		<div class="row">
-			<div class="col-xs-12 col-md-3">
-					<p>Railway Ticket Booking Automation</p>
-			</div>
-			<div class="col-xs-12 col-md-9">
-					<p>I am writing a script that will automate the process of booking railway tickets from IRCTC website. The program will first ask for the passenger details and then wait for user input to start the process (as you need to wait till 11 am to book tatkal tickets).Specially useful for tatkal tickets where the time to book a ticket is really low and this automation can give you an edge and increase the chances of getting the taktal ticket.</p>
-			</div>
+		<div class="col-xs-12 col-md-9">
+			<p>This is the project I am doing under persistent. This is a chatbot web-app which will answer engineering college related queries such as queries about admissions or placements.</p>
 		</div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-xs-12 col-md-3">
+			<p style="font-weight: bold;">RAILWAY TICKET BOOKING AUTOMATION</p>
+		</div>
+		<div class="col-xs-12 col-md-9">
+			<p>I am writing a script that will automate the process of booking railway tickets from IRCTC website. The program will first ask for the passenger details and then wait for user input to start the process (as you need to wait till 11 am to book tatkal tickets).Specially useful for tatkal tickets where the time to book a ticket is really low and this automation can give you an edge and increase the chances of getting the taktal ticket.</p>
+		</div>
+	</div>
 
 		<br>
 		<br>
 
-		<div class="row">
-			<div class="col-xs-12 subtitle">
-				<h2>INTERPERSONAL SKILLS</h2>
-				<br><br>
-			</div>
+	<div class="row">
+		<div class="col-xs-12 subtitle">
+			<h2>INTERPERSONAL SKILLS</h2>
+			<br><br>
 		</div>
+	</div>
 
-		<div class="row">
-			<div class="col-xs-12 col-md-3">
-						<p>Public Speaking and Debating</p>
-			</div>
-			<div class="col-xs-12 col-md-9">
-						<p>I am very confident in delivering speech in front of mass audience. I have won various awards in speech and debate competitions.</p>
-			</div>
+	<div class="row">
+		<div class="col-xs-12 col-md-3">
+			<p style="font-weight: bold;">PUBLIC SPEAKING & DEBATING</p>
 		</div>
-		
-		<div class="row">
-			<div class="col-xs-12 col-md-3">
-						<p>Team Player</p>
-			</div>
-			<div class="col-xs-12 col-md-9">
-						<p>I enjoy working with people as a team. I realized this by playing various sports and also organizing some co-curricular events.</p>
-			</div>
+		<div class="col-xs-12 col-md-9">
+			<p>I am very confident in delivering speech in front of mass audience. I have won various awards in speech and debate competitions.</p>
 		</div>
-		
-		<div class="row">
-			<div class="col-xs-12 col-md-3">
-						<p>Leadership</p>
-			</div>
-			<div class="col-xs-12 col-md-9">
-						<p>I believe that I have leadership qualities. I have found myself many time leading the team in the right direction with a solution centric approach.</p>
-			</div>
-		</div>		
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-xs-12 col-md-3">
+			<p style="font-weight: bold;">TEAM PLAYER</p>
+		</div>
+		<div class="col-xs-12 col-md-9">
+			<p>I enjoy working with people as a team. I realized this by playing various sports and also organizing some co-curricular events.</p>
+		</div>
+	</div>
+	<br>
+	<div class="row">
+		<div class="col-xs-12 col-md-3">
+			<p style="font-weight: bold;">LEADERSHIP</p>
+		</div>
+		<div class="col-xs-12 col-md-9">
+			<p>I believe that I have leadership qualities. I have found myself many time leading the team in the right direction with a solution centric approach.</p>
+		</div>
+	</div>	
 
 		<br>
 		<br>
 
-		<div class="row">
-			<div class="col-xs-12 col-md-7 subtitle">
-				<h2>PUBLIC SPEAKING ACHIEVEMENTS</h2>
-				<br><br>
-			</div>
+	<div class="row">
+		<div class="col-xs-12 col-md-7 subtitle">
+			<h2>PUBLIC SPEAKING ACHIEVEMENTS</h2>
+			<br><br>
 		</div>
+	</div>
 
-		<div class="row">
-			<div class="col-xs-12">
-				<ul class="list-unstyled">
-						<li><span class="glyphicon glyphicon-star"></span> 1st Rank(Pair), Inter-Collegiate Debate Competition, organized by Tirpude College of Management,Nagpur. February 3rd, 2017.</li>
-                        <br>
-                        <li><span class="glyphicon glyphicon-star"></span> 1st Rank (Best Speaker Award),Inter-Collegiate Extempore Competition, organized by Tirpude College of Management,Nagpur. February 3rd, 2017.</li>
-                        <br>
-                        <li><span class="glyphicon glyphicon-star"></span> 2nd Rank(Pair), National Level Debate Competition at Jamia Millia Islamia University, New Delhi. February 17th, 2016.</li>
-                        <br>
-                        <li><span class="glyphicon glyphicon-star"></span> 3rd Rank, Vidharbha Level Elocution Competition organized at 'C.P. and Berar college' in association with Late. Savarkar Memorial Committee, Nagpur. March, 2017</li>
-                        <br>
-                        <li><span class="glyphicon glyphicon-star"></span> 1st Rank, Orator Of The Year, organized by NSS unit,Ramdeobaba College of Engineering and Management, Nagpur. 2015</li>
-                        <br>
-                        <li><span class="glyphicon glyphicon-star"></span> 1st Rank(Team of 5), Youth Parliament, organized by SRC,Ramdeobaba College of Engineering and Management, Nagpur. 2016</li>
-                        <br>
-                        <li><span class="glyphicon glyphicon-star"></span> 3rd Rank, Inter-College Debate & Extempore (combined) Competition organized by Government Institute of Forensic Sciences,Nagpur. January 31st, 2017</li>
-                        <br>
-                         <li><span class="glyphicon glyphicon-star"></span> 3rd Rank(Pair), University Level Inter-Collegiate Debate Competition, organized by Dr. M.K. Umathe Arts, Science & Shri R.Mokhare Commerse College, Nagpur. January 17th, 2017</li>
-                        <br>
-                        <li><span class="glyphicon glyphicon-star"></span> 3rd Rank, Intra-College debate competition, organized by Power Grid Corporation in association with Ramdeobaba College of Engineering and Management, Nagpur. October 25th, 2016</li>
-                        <br>
-				</ul>
-			</div>
+	<div class="row">
+		<div class="col-xs-12">
+			<ul class="list-unstyled">
+					<li><span class="glyphicon glyphicon-star"></span> 1st Rank(Pair), Inter-Collegiate Debate Competition, organized by Tirpude College of Management,Nagpur. February 3rd, 2017.</li>
+	                <br>
+	                <li><span class="glyphicon glyphicon-star"></span> 1st Rank (Best Speaker Award),Inter-Collegiate Extempore Competition, organized by Tirpude College of Management,Nagpur. February 3rd, 2017.</li>
+	                <br>
+	                <li><span class="glyphicon glyphicon-star"></span> 2nd Rank(Pair), National Level Debate Competition at Jamia Millia Islamia University, New Delhi. February 17th, 2016.</li>
+	                <br>
+	                <li><span class="glyphicon glyphicon-star"></span> 3rd Rank, Vidharbha Level Elocution Competition organized at 'C.P. and Berar college' in association with Late. Savarkar Memorial Committee, Nagpur. March, 2017</li>
+	                <br>
+	                <li><span class="glyphicon glyphicon-star"></span> 1st Rank, Orator Of The Year, organized by NSS unit,Ramdeobaba College of Engineering and Management, Nagpur. 2015</li>
+	                <br>
+	                <li><span class="glyphicon glyphicon-star"></span> 1st Rank(Team of 5), Youth Parliament, organized by SRC,Ramdeobaba College of Engineering and Management, Nagpur. 2016</li>
+	                <br>
+	                <li><span class="glyphicon glyphicon-star"></span> 3rd Rank, Inter-College Debate & Extempore (combined) Competition organized by Government Institute of Forensic Sciences,Nagpur. January 31st, 2017</li>
+	                <br>
+	                 <li><span class="glyphicon glyphicon-star"></span> 3rd Rank(Pair), University Level Inter-Collegiate Debate Competition, organized by Dr. M.K. Umathe Arts, Science & Shri R.Mokhare Commerse College, Nagpur. January 17th, 2017</li>
+	                <br>
+	                <li><span class="glyphicon glyphicon-star"></span> 3rd Rank, Intra-College debate competition, organized by Power Grid Corporation in association with Ramdeobaba College of Engineering and Management, Nagpur. October 25th, 2016</li>
+	                <br>
+			</ul>
 		</div>
+	</div>
 	</div>
 	
 	<br>
@@ -329,17 +329,6 @@
 			<p class="text-muted" style="font-size: 1.25em">Made with <img src="heart.png" alt="love" style="height: 1em"> by Raunak Singwi</p>
 		</div>
 	</div>
-
-	<!-- jQuery library -->
-	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
-
-	<script>
-		$("document").ready(function(){
-
-
-		})
-	</script>
-</div>
 
 </body>
 </html>
