--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -24,12 +24,12 @@
         :root {
             --bg-image: url('https://images.unsplash.com/photo-1501862700950-18382cd41497?ixlib=rb-1.2.1&auto=format&fit=crop&w=1947&q=80');
             --bg-color: #121212;
-            --text-color: #1d1d1f;
-            --heading-color: #1d1d1f;
-            --subheading-color: #1d1d1f;
-            --section-bg: rgba(255, 255, 255, 0.1);
+            --text-color: #e0e0e0;
+            --heading-color: #ffffff;
+            --subheading-color: #bdbdbd;
+            --section-bg: rgba(0, 0, 0, 0.6);
             --section-border: rgba(255, 255, 255, 0.18);
-            --skill-tag-bg: rgba(255, 255, 255, 0.1);
+            --skill-tag-bg: rgba(255, 255, 255, 0.2);
             --skill-tag-color: #ffffff;
             --btn-bg: #37474f;
             --btn-color: #81d4fa;
@@ -38,15 +38,20 @@
             --social-icon-hover: #4fc3f7;
             --footer-bg: rgba(0, 0, 0, 0.8);
             --footer-color: #fff;
+            --font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica', 'Arial', sans-serif;
+            --accent-color: #4fc3f7;
+            --secondary-color: #9e9e9e;
+            --link-color: #81d4fa;
+            --title-color: #a0a0a0; /* New variable for job titles and degree */
         }
 
         @media (prefers-color-scheme: light) {
             :root {
                 --bg-image: url('https://images.unsplash.com/photo-1517685352821-92cf88aee5a5?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
                 --bg-color: #f0f8ff;
-                --text-color: #1d1d1f;
+                --text-color: #333333;
                 --heading-color: #1d1d1f;
-                --subheading-color: #1d1d1f;
+                --subheading-color: #616161;
                 --section-bg: rgba(255, 255, 255, 0.9);
                 --section-border: rgba(0, 0, 0, 0.1);
                 --skill-tag-bg: rgba(2, 119, 189, 0.1);
@@ -59,14 +64,18 @@
                 --footer-bg: rgba(2, 119, 189, 0.1);
                 --footer-color: #000000;
                 --section-title-color: #1d1d1f;
+                --accent-color: #0277bd;
+                --secondary-color: #757575;
+                --link-color: #01579b;
+                --title-color: #4a4a4a; /* Darker shade for light mode */
             }
         }
 
         body, html {
-            font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica', 'Arial', sans-serif;
+            font-family: var(--font-family);
             font-weight: 400;
             color: var(--text-color);
-            line-height: 1.6;
+            line-height: 1.8;
             background-color: var(--bg-color);
             background-image: var(--bg-image);
             background-attachment: fixed;
@@ -98,39 +107,46 @@
         }
 
         h1, h2, h3, h4, h5, h6 {
-            font-weight: 600;
-            letter-spacing: -0.022em;
+            font-weight: 700;
+            letter-spacing: -0.02em;
             color: var(--heading-color);
+            margin-bottom: 1rem;
         }
 
         h1 {
-            font-size: 3.5rem;
+            font-size: 4rem;
             color: #fff;
             text-align: center;
-            margin-bottom: 30px;
+            margin-bottom: 1.5rem;
         }
 
         h2 {
             font-size: 2.5rem;
-            border-bottom: none;
-            padding-bottom: 10px;
-            margin-top: 0;
-            margin-bottom: 30px;
-            color: #ffffff;
-            font-weight: 600;
+            margin-bottom: 1.5rem;
+            color: var(--accent-color);
         }
 
         h3 {
             font-size: 1.8rem;
-            color: var(--subheading-color);
-            font-weight: 500;
+            color: var(--title-color);
+            font-weight: 600;
+            margin-bottom: 0.5rem;
+        }
+
+        h4 {
+            font-size: 1.5rem;
+            color: var(--secondary-color);
+            font-weight: 400;
+            font-style: italic;
+            margin-bottom: 0.5rem;
         }
 
         p, li {
             font-weight: 400;
-            letter-spacing: -0.016em;
+            letter-spacing: -0.01em;
             line-height: 1.8;
             color: var(--text-color);
+            margin-bottom: 1rem;
         }
 
         .section {
@@ -140,8 +156,8 @@
             backdrop-filter: blur(10px);
             -webkit-backdrop-filter: blur(10px);
             border: 1px solid var(--section-border);
-            padding: 40px;
-            margin-bottom: 50px;
+            padding: 3rem;
+            margin-bottom: 4rem;
             transition: all 0.3s ease;
             position: relative;
             overflow: hidden;
@@ -178,7 +194,7 @@
 
         .skill-tag {
             background-color: var(--skill-tag-bg);
-            color: var(--skill-tag-color);
+            color: var(--accent-color);
             padding: 8px 15px;
             border-radius: 20px;
             display: inline-block;
@@ -187,18 +203,20 @@
             transition: all 0.3s ease;
             backdrop-filter: blur(5px);
             -webkit-backdrop-filter: blur(5px);
+            border: 1px solid var(--accent-color);
         }
 
         .skill-tag:hover {
-            background-color: rgba(255, 255, 255, 0.2);
+            background-color: var(--accent-color);
+            color: var(--bg-color);
             transform: translateY(-2px);
         }
 
         .timeline {
             font-size: 0.9rem;
-            color: var(--text-color);  /* Changed to use text-color variable */
+            color: var(--secondary-color);
+            font-style: italic;
             margin-bottom: 15px;
-            font-weight: 400;
         }
 
         .social-icons a {
@@ -237,12 +255,13 @@
         }
 
         .hero-content h1 {
-            font-size: 4rem;
-            margin-bottom: 20px;
+            font-size: 4.5rem;
+            margin-bottom: 1.5rem;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
             position: relative;
             display: inline-block;
             font-weight: 700;
+            color: #ffffff; /* Change this to white */
         }
 
         .hero-content h1::after {
@@ -275,24 +294,25 @@
         }
 
         .hero-content p {
-            font-size: 1.5rem;
-            margin-bottom: 30px;
+            font-size: 1.75rem;
+            margin-bottom: 2rem;
             text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
             font-weight: 400;
+            color: var(--heading-color);
         }
 
         .btn-primary {
-            background-color: var(--btn-bg);
+            background-color: var(--accent-color);
             border: none;
-            padding: 10px 25px;
+            padding: 0.75rem 1.5rem;
             font-size: 1.1rem;
             transition: all 0.3s ease;
-            color: var(--btn-color);
-            font-weight: 500;
+            color: #ffffff;
+            font-weight: 600;
         }
 
         .btn-primary:hover {
-            background-color: var(--btn-hover-bg);
+            background-color: var(--link-color);
             transform: translateY(-2px);
         }
 
@@ -327,15 +347,47 @@
         .section-header h2 {
             margin: 0;
             flex-grow: 1;
-            color: var(--section-title-color);  /* Use the new variable for section titles */
+            color: var(--accent-color); /* Change this to use accent color */
         }
 
         .section-header::after {
             content: '';
             height: 1px;
-            background: linear-gradient(to right, rgba(255,255,255,0.5), rgba(255,255,255,0));
+            background: linear-gradient(to right, var(--secondary-color), transparent);
             flex-grow: 1;
             margin-left: 20px;
+        }
+
+        /* Add new styles for improved spacing and animations */
+        .section > * + * {
+            margin-top: 2rem;
+        }
+
+        .fade-in {
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 0.5s ease, transform 0.5s ease;
+        }
+
+        .fade-in.visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        /* Add this new style for better contrast in dark mode */
+        @media (prefers-color-scheme: dark) {
+            .section {
+                border: 1px solid rgba(255, 255, 255, 0.1);
+            }
+        }
+
+        a {
+            color: var(--link-color);
+            transition: color 0.3s ease;
+        }
+
+        a:hover {
+            color: var(--accent-color);
         }
     </style>
 </head>
@@ -448,7 +500,7 @@
                 <h2>Education</h2>
             </div>
             <h3>Bachelor of Engineering in Information Technology</h3>
-            <p>Ramdeobaba College of Engineering, Nagpur</p>
+            <h4>Ramdeobaba College of Engineering, Nagpur</h4>
         </section>
     </div>
 
@@ -544,6 +596,23 @@
             img.addEventListener('error', function() {
                 console.error('Background image failed to load');
                 bgImage.style.display = 'none';
+            });
+        });
+
+        // Add new script for fade-in animation
+        document.addEventListener('DOMContentLoaded', (event) => {
+            const fadeElements = document.querySelectorAll('.fade-in');
+
+            const observer = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.classList.add('visible');
+                    }
+                });
+            }, { threshold: 0.1 });
+
+            fadeElements.forEach(element => {
+                observer.observe(element);
             });
         });
     </script>
